--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,8 @@ License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/timelyportfolio/shotsignR
 BugReports: https://github.com/timelyportfolio/shotsignR/issues
+Imports:
+    htmlwidgets
 Suggests:
     testthat
 RoxygenNote: 4.1.1.9001
