--- a/inst/htmlwidgets/shotsign.yaml
+++ b/inst/htmlwidgets/shotsign.yaml
@@ -3,3 +3,7 @@ dependencies:
     version: 3.5.5
     src: htmlwidgets/lib/d3
     script: d3.min.js
+  - name: Styles
+    version: 0.0.1
+    src: htmlwidgets/lib
+    stylesheet: styles.css
